# candidate_pockets_PDBBind

./: .gitignore  README.md  drugclip_combine_set_library.md  drugclip_combine_set_library.qmd  main.py  pdbbind_pocket_library.md  pdbbind_pocket_library.qmd  pyproject.toml  specs.md
biosensia_pocket_library/: __init__.py  citation_enrichment.py  cli.py  combine_set_mapping.py  combine_set_pipeline.py  combine_set_source.py  config.py  constants.py  drugclip_compatibility.py  drugclip_contract.py  event_logging.py  exceptions.py  finalization.py  hashing.py  identity.py  index_parser.py  inventory.py  ligand_parser.py  lmdb_export.py  manifest.py  models.py  pipeline.py  pocket_comparison.py  pocket_extractor.py  progress.py  protein_parser.py  quality.py  rcsb.py  rcsb_download.py  rcsb_metadata.py  reference_links.py  reporting.py  schemas.py  scrub.py  sidecars.py  source_inventory.py  structure_mapping.py  trusted_pickle.py  validation.py
config/: drugclip-combine-set-library.toml  pdbbind-pocket-library.toml  pocket-quality-rules.toml
scripts/: build_pdbbind_pocket_library.py  verify_drugclip_loader.py
tests/: test_cli.py  test_combine_set.py  test_geometry.py  test_index_parser.py  test_ligand_parser.py  test_local_data.py  test_pipeline.py  test_rcsb.py  test_reference_links.py  test_sidecars_lmdb.py
